@@ -2477,7 +2477,6 @@ start_job(cupsd_job_t     *job,		/* I - Job ID */
   int			filterfds[2][2];/* Pipes used between filters */
   int			envc;		/* Number of environment variables */
   char			**argv,		/* Filter command-line arguments */
-			sani_uri[1024],	/* Sanitized DEVICE_URI env var */
 			filename[1024],	/* Job filename */
 			command[1024],	/* Full path to command */
 			jobid[255],	/* Job ID string */
@@ -3124,7 +3123,6 @@ start_job(cupsd_job_t     *job,		/* I - Job ID */
            job->filetypes[job->current_file]->type);
   snprintf(device_uri, sizeof(device_uri), "DEVICE_URI=%s",
            printer->device_uri);
-  cupsdSanitizeURI(printer->device_uri, sani_uri, sizeof(sani_uri));
   snprintf(ppd, sizeof(ppd), "PPD=%s/ppd/%s.ppd", ServerRoot, printer->name);
   snprintf(printer_name, sizeof(printer_name), "PRINTER=%s", printer->name);
   snprintf(rip_max_cache, sizeof(rip_max_cache), "RIP_MAX_CACHE=%s", RIPCache);
@@ -3205,7 +3203,7 @@ start_job(cupsd_job_t     *job,		/* I - Job ID */
       cupsdLogJob(job, CUPSD_LOG_DEBUG, "envp[%d]=\"%s\"", i, envp[i]);
     else
       cupsdLogJob(job, CUPSD_LOG_DEBUG, "envp[%d]=\"DEVICE_URI=%s\"", i,
-                  sani_uri);
+                  printer->sanitized_device_uri);
 
   if (printer->remote)
     job->current_file = job->num_files;
@@ -3417,7 +3415,7 @@ start_job(cupsd_job_t     *job,		/* I - Job ID */
       else
         backroot = !(backinfo.st_mode & (S_IRWXG | S_IRWXO));
 
-      argv[0] = sani_uri;
+      argv[0] = printer->sanitized_device_uri;
 
       filterfds[slot][0] = -1;
       filterfds[slot][1] = -1;
